--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
     			<url>http://18.221.112.132:8081/nexus/content/repositories/sample</url>
   		    </repository>
 	</distributionManagement>
+	<repository>
+		<id>snapshotrepo</id>
+		<name>snapshotrepo</name>
+		<url>http://172.16.121.20:8081/#browse/browse:snapshotrepo</url>
+		</repository>
 <properties>
           <sonar.host.url>http://172.16.121.128:9000</sonar.host.url>
           <sonar.projectName>test</sonar.projectName>
